cmake_minimum_required(VERSION 3.13)
project(TRABAJOENCLASE_AGREGACIONYHERENCIA_ALEJANDROMAMANIANDIA)

set(CMAKE_CXX_STANDARD 14)

add_executable(TRABAJOENCLASE_AGREGACIONYHERENCIA_ALEJANDROMAMANIANDIA main.cpp Book.cpp Book.h Magazine.cpp Magazine.h Library.cpp Library.h Volume.cpp Volume.h catch.hpp main_test.cpp)